got vertaa huutonet working

--- a/frontend_/src/App.css
+++ b/frontend_/src/App.css
@@ -9,6 +9,15 @@
 
 }
 
+/* vertaa sales cards   */
+.vertaaSalesCardGroup {
+    position: relative;
+    top: 70px;
+
+}
+
+
+
 /* page text style */
 
 .pageText {
