--- a/frontend_/src/Login.css
+++ b/frontend_/src/Login.css
@@ -1,11 +1,6 @@
 
 
 
-.loginBackground {
-  background-color: #aaa2a2;
-
-}
-
 .createUserButtonnn {
   background: none;
   border: none;
@@ -59,7 +54,19 @@
 
   text-align: center;
   margin-top: 30px;
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+  color: inherit;
+  cursor: pointer;
+  transition: color 0.3s ease; /* Add a smooth color transition */
+  
+}
 
+.submitButton:hover {
+  color: rgb(104, 104, 108); /* Change the color on hover */
 }
 
 
