--- a/frontend_/src/Login.css
+++ b/frontend_/src/Login.css
@@ -1,5 +1,19 @@
 
+.pageTextLoginn {
 
+  text-align: center;
+  margin-top: 30px;
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+  color: inherit;
+  cursor: pointer;
+  transition: color 0.3s ease; /* Add a smooth color transition */
+
+  
+}
 
 .createUserButtonnn {
   background: none;
@@ -50,24 +64,6 @@
   
 }
 
-.pageTextLogin {
-
-  text-align: center;
-  margin-top: 30px;
-  background: none;
-  border: none;
-  padding: 0;
-  font-size: inherit;
-  font-family: inherit;
-  color: inherit;
-  cursor: pointer;
-  transition: color 0.3s ease; /* Add a smooth color transition */
-  
-}
-
-.submitButton:hover {
-  color: rgb(104, 104, 108); /* Change the color on hover */
-}
 
 
 .LoginCard {
@@ -152,9 +148,6 @@
 }
 
 
-.topBarLogin {
-  
-}
 
 
 
