--- a/frontend_/src/Login.css
+++ b/frontend_/src/Login.css
@@ -69,7 +69,7 @@
 .LoginCard {
     border: 10px solid black;
     position: relative;
-    top: 15px;
+    top: 20%;
     width: 50%;
     margin: 0 auto;
     border-radius: 10%;
@@ -92,20 +92,20 @@
   .input-group {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 5%;
   }
 
 
   
   .input-group label {
-    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    margin-right: 10%;
   }
 
 .formButton {
     display: flex;
     align-items: center;
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
 
@@ -121,8 +121,6 @@
   background: none;
   border: none;
   padding: 0;
-  margin: 0;
-  margin-left: 10px;
   font-size: inherit;
   font-family: inherit;
   color: inherit;
@@ -137,8 +135,7 @@
 
 .button-container {
   display: flex; /* To make the buttons flex horizontally */
-  gap: 10px; /* Adjust the value to control the space between buttons */
-  height: 50px;
+  gap: 10%; /* Adjust the value to control the space between buttons */
   margin-left: 400px;
   background: #d9d2d2;
 }
